airflow/airflow-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: airflow
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  template:
    metadata:
      labels:
        app: airflow
    spec:
      containers:
      - name: airflow
        image: puckel/docker-airflow
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http
        volumeMounts:
        - mountPath: /usr/local/airflow/dags
          name: airflow-dags
      volumes:
        - name: airflow-dags
          hostPath:
            path: /tmp/airflow-dags
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-svc
  namespace: airflow
spec:
  selector:
    app: airflow
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
