airflow/airflow-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
  labels:
    k8s-app: airflow
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http
spec:
  rules:
  - host: airflow.localhost
    http:
      paths:
      - backend:
          serviceName: airflow-svc
          servicePort: 80
